<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".UserPage">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        app:layout_constraintBottom_toTopOf="@+id/view"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:id="@+id/linearLayout2"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:padding="20dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <ImageView
                android:id="@+id/imageView2"
                android:layout_width="match_parent"
                android:layout_height="179dp"
                android:src="@drawable/user_image"
                app:tint="@color/black" />

            <TextView
                android:id="@+id/textView4"
                android:layout_width="match_parent"
                android:layout_height="20dp"
                android:layout_marginTop="20dp"
                android:text="@string/email_word"
                android:textColor="@color/main_color"
                android:textSize="16sp"
                android:textStyle="bold"
                tools:ignore="TextContrastCheck" />


            <EditText
                android:id="@+id/emailText"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:autofillHints=""
                android:ems="10"
                android:enabled="true"
                android:hint="@string/email_word"
                android:inputType="textEmailAddress"
                android:minHeight="0dp"
                android:textColorLink="@color/main_color"
                android:textSize="17sp"
                tools:ignore="TextContrastCheck,SpeakableTextPresentCheck,DuplicateSpeakableTextCheck" />

            <TextView
                android:id="@+id/nameView"
                android:layout_width="match_parent"
                android:layout_height="20dp"
                android:text="@string/givenName_word"
                android:textColor="@color/main_color"
                android:textSize="16sp"
                android:textStyle="bold"
                tools:ignore="TextContrastCheck" />


            <EditText
                android:id="@+id/givenNameText"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:autofillHints=""
                android:ems="10"
                android:enabled="true"
                android:hint="@string/givenName_word"
                android:inputType="textEmailAddress"
                android:minHeight="0dp"
                android:textColorLink="@color/main_color"
                android:textSize="17sp"
                tools:ignore="TextContrastCheck,SpeakableTextPresentCheck,DuplicateSpeakableTextCheck" />

            <TextView
                android:id="@+id/surnameView"
                android:layout_width="match_parent"
                android:layout_height="20dp"
                android:text="@string/surname_word"
                android:textColor="@color/main_color"
                android:textSize="16sp"
                android:textStyle="bold"
                tools:ignore="TextContrastCheck" />


            <EditText
                android:id="@+id/surnameText"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:autofillHints=""
                android:ems="10"
                android:enabled="true"
                android:hint="@string/surname_word"
                android:inputType="textEmailAddress"
                android:minHeight="0dp"
                android:textColorLink="@color/main_color"
                android:textSize="17sp"
                tools:ignore="TextContrastCheck,SpeakableTextPresentCheck,DuplicateSpeakableTextCheck" />

            <Button
                android:layout_marginTop="20dp"
                android:id="@+id/resetPassBtn"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:backgroundTint="@color/main_color"
                android:text="@string/resetPass_word"
                android:textColor="@color/white"
                app:cornerRadius="5dp"
                tools:ignore="TextContrastCheck,DuplicateSpeakableTextCheck"
                android:onClick="changePassword"
                />

        </LinearLayout>

        <LinearLayout
            android:padding="20dp"
            android:layout_width="match_parent"
            android:layout_height="100dp"
            app:layout_constraintBottom_toBottomOf="@+id/linearLayout2"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent">

            <Button
                android:id="@+id/signOutBtn"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:onClick="signOut"
                android:backgroundTint="@color/black"
                android:text="@string/signOut_word"
                android:textColor="@color/white"
                app:cornerRadius="5dp"
                tools:ignore="TextContrastCheck,DuplicateSpeakableTextCheck" />
        </LinearLayout>


    </androidx.constraintlayout.widget.ConstraintLayout>

    <View
        android:id="@+id/view"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@android:color/darker_gray"
        app:layout_constraintBottom_toTopOf="@+id/linearLayout"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="match_parent"
        android:layout_height="80dp"
        android:gravity="center"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <LinearLayout
            android:id="@+id/restaurantBtnLayout"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/imageView3"
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:scrollbarSize="10dp"
                app:srcCompat="@drawable/ic_baseline_search"
                app:tint="@color/black" />

            <TextView
                android:id="@+id/textView3"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/restaurant_word"
                android:textColor="@color/black" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/reservationsBtnLayout"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/imageView5"
                android:layout_width="30dp"
                android:layout_height="30dp"
                app:srcCompat="@drawable/ic_baseline_calendar_month"
                app:tint="@color/black" />

            <TextView
                android:id="@+id/textView7"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/reservations_word"
                android:textColor="@color/black" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/userBtnLayout"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/imageView6"
                android:layout_width="30dp"
                android:layout_height="30dp"
                app:srcCompat="@drawable/ic_baseline_person_24"
                app:tint="@color/main_color" />

            <TextView
                android:id="@+id/textView8"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/user_word"
                android:textColor="@color/main_color" />
        </LinearLayout>
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>